WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315320
REGRESSION(
308209@main
): Top and bottom fixed position elements flicker when rubber band scrolling
https://bugs.webkit.org/show_bug.cgi?id=315320
Summary
REGRESSION(308209@main): Top and bottom fixed position elements flicker when ...
Ryan Reno
Reported
2026-05-21 13:56:13 PDT
When rubber band scrolling while obscured insets are changing interactively fixed position elements will flicker. This is becasue we aren't updating the fixed clipping view bounds when we are throttling visible content rect updates.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryan Reno
Comment 1
2026-05-21 13:56:14 PDT
<
rdar://problem/176226179
>
Ryan Reno
Comment 2
2026-05-21 13:59:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65435
EWS
Comment 3
2026-05-22 14:13:33 PDT
Committed
313759@main
(13e748d81951): <
https://commits.webkit.org/313759@main
> Reviewed commits have been landed. Closing PR #65435 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug