Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm
@@ -3173,6 +3173,7 @@ static bool scrollViewCanScroll(UIScrollView *scrollView)
         _page->updateVisibleContentRectsLocally(*info);
         auto layoutViewport = _page->unconstrainedLayoutViewportRect();
         _page->adjustLayersForLayoutViewport(_page->unobscuredContentRect().location(), layoutViewport, _page->displayedContentScale());
+        [_contentView updateFixedClippingView:layoutViewport];
     }
 }
 
